--- a/message.html
+++ b/message.html
@@ -11,7 +11,6 @@ body{
 margin:0;
 font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
 background:#f3f4f6;
-color:#111;
 }
 
 /* HEADER */
@@ -28,40 +27,17 @@ gap:12px;
 padding:0 15px;
 background:white;
 border-bottom:1px solid #ddd;
-z-index:5;
 }
 
-.chatHeader button{
-background:none;
-border:none;
-font-size:22px;
-cursor:pointer;
-}
-
-.avatarWrapper{
-position:relative;
-}
-
-.avatar{
+.chatHeader img{
 width:40px;
 height:40px;
 border-radius:50%;
 object-fit:cover;
 }
 
-.onlineDot{
-position:absolute;
-bottom:0;
-right:0;
-width:10px;
-height:10px;
-background:#22c55e;
-border-radius:50%;
-border:2px solid white;
-}
-
 .chatTitle{font-weight:700}
-.chatRank{font-size:12px;color:#6b7280}
+.chatRank{font-size:12px;color:#777}
 
 /* CHAT AREA */
 
@@ -75,11 +51,10 @@ overflow:auto;
 padding:15px;
 }
 
-/* MESSAGE */
+/* MESSAGES */
 
 .message{
 display:flex;
-gap:10px;
 margin-bottom:12px;
 }
 
@@ -93,7 +68,6 @@ padding:10px 14px;
 border-radius:18px;
 max-width:70%;
 font-size:14px;
-box-shadow:0 1px 2px rgba(0,0,0,0.1);
 }
 
 .message.me .bubble{
@@ -103,13 +77,7 @@ background:#e5e7eb;
 .chatPhoto{
 max-width:220px;
 border-radius:10px;
-margin-top:5px;
-}
-
-.time{
-font-size:10px;
-color:#6b7280;
-margin-top:3px;
+margin-top:6px;
 }
 
 /* INPUT */
@@ -126,8 +94,8 @@ padding:10px;
 
 .preview{
 max-width:120px;
-border-radius:10px;
-margin-bottom:5px;
+margin-bottom:6px;
+border-radius:8px;
 }
 
 .inputRow{
@@ -141,14 +109,12 @@ flex:1;
 padding:12px;
 border-radius:20px;
 border:1px solid #ddd;
-outline:none;
 }
 
 .inputRow button{
 background:none;
 border:none;
 font-size:22px;
-cursor:pointer;
 }
 
 </style>
@@ -162,13 +128,10 @@ cursor:pointer;
 
 <button onclick="history.back()">←</button>
 
-<div class="avatarWrapper">
-<img id="chatAvatar" class="avatar">
-<div class="onlineDot"></div>
-</div>
+<img id="chatAvatar" src="">
 
 <div>
-<div class="chatTitle" id="chatTitle">Loading...</div>
+<div class="chatTitle" id="chatTitle">Chat</div>
 <div class="chatRank" id="chatRank"></div>
 </div>
 
@@ -176,7 +139,7 @@ cursor:pointer;
 
 </div>
 
-<!-- CHAT AREA -->
+<!-- CHAT -->
 
 <div class="chatArea" id="chatArea"></div>
 
@@ -184,7 +147,7 @@ cursor:pointer;
 
 <div class="chatInput">
 
-<img id="previewImage" class="preview" style="display:none">
+<img id="preview" class="preview" style="display:none">
 
 <div class="inputRow">
 
@@ -212,9 +175,8 @@ query,
 orderBy,
 onSnapshot,
 doc,
-getDocs,
-updateDoc,
-where
+getDoc,
+updateDoc
 } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
@@ -232,14 +194,11 @@ const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
 let myEmail;
 let otherEmail;
 let chatID;
-let myPhoto="";
-let otherPhoto="";
-let sending=false;
 
 const chatArea=document.getElementById("chatArea");
-const previewImage=document.getElementById("previewImage");
+const preview=document.getElementById("preview");
 
-function getChatId(a,b){
+function chatId(a,b){
 return [a,b].sort().join("_");
 }
 
@@ -257,59 +216,32 @@ myEmail=user.email.toLowerCase();
 const params=new URLSearchParams(location.search);
 otherEmail=params.get("user");
 
-if(otherEmail){
-startChat(otherEmail.toLowerCase());
-}
+chatID=chatId(myEmail,otherEmail);
+
+loadMessages();
+loadProfile();
 
 });
 
 /* LOAD PROFILE */
 
-async function getProfile(email){
+async function loadProfile(){
 
-let name=email.split("@")[0];
-let rank="";
-let photo="";
+try{
 
-const q=query(collection(db,"users"),where("email","==",email));
-const snap=await getDocs(q);
+const snap=await getDoc(doc(db,"users",otherEmail));
 
-snap.forEach(docSnap=>{
+if(snap.exists()){
 
-const d=docSnap.data();
+const d=snap.data();
 
-name=d.name || name;
-rank=d.rank || "";
-photo=d.photo || "";
-
-});
-
-return {name,rank,photo};
+chatTitle.innerText=d.name || "User";
+chatRank.innerText=d.rank || "";
+chatAvatar.src=d.photo || "";
 
 }
 
-/* START CHAT */
-
-async function startChat(email){
-
-otherEmail=email;
-chatID=getChatId(myEmail,email);
-
-/* load messages first */
-loadMessages();
-
-/* load profile */
-
-const profile=await getProfile(email);
-
-chatTitle.innerText=profile.name;
-chatRank.innerText=profile.rank;
-chatAvatar.src=profile.photo || "";
-
-otherPhoto=profile.photo;
-
-const myProfile=await getProfile(myEmail);
-myPhoto=myProfile.photo;
+}catch{}
 
 }
 
@@ -331,26 +263,15 @@ if(d.chatId!==chatID) return;
 
 const me=d.from===myEmail;
 
-const avatar=me?myPhoto:otherPhoto;
-
-const time=new Date(d.createdAt).toLocaleTimeString([],{
-hour:'2-digit',
-minute:'2-digit'
-});
-
 chatArea.innerHTML+=`
 
 <div class="message ${me?'me':''}">
-
-${!me?`<img class="avatar" src="${avatar}">`:''}
 
 <div class="bubble">
 
 ${d.text||""}
 
 ${d.photo?`<img src="${d.photo}" class="chatPhoto">`:""}
-
-<div class="time">${time}</div>
 
 </div>
 
@@ -373,8 +294,10 @@ photoInput.onchange=()=>{
 const file=photoInput.files[0];
 
 if(file){
-previewImage.src=URL.createObjectURL(file);
-previewImage.style.display="block";
+
+preview.src=URL.createObjectURL(file);
+preview.style.display="block";
+
 }
 
 }
@@ -383,19 +306,15 @@ previewImage.style.display="block";
 
 sendBtn.onclick=async()=>{
 
-if(sending) return;
-
 const text=messageInput.value.trim();
 const file=photoInput.files[0];
 
 if(!text && !file) return;
 
-sending=true;
-
-let preview="";
+let previewURL="";
 
 if(file){
-preview=URL.createObjectURL(file);
+previewURL=URL.createObjectURL(file);
 }
 
 const ref=await addDoc(collection(db,"messages"),{
@@ -404,16 +323,16 @@ chatId:chatID,
 from:myEmail,
 to:otherEmail,
 text:text,
-photo:preview,
+photo:previewURL,
 createdAt:Date.now()
 
 });
 
 messageInput.value="";
-previewImage.style.display="none";
+preview.style.display="none";
 photoInput.value="";
 
-/* upload in background */
+/* upload background */
 
 if(file){
 
@@ -436,8 +355,6 @@ photo:data.data.url
 }
 
 }
-
-sending=false;
 
 }
 
